Fixed unnecessary overflow-x axis

--- a/src/pages/home/home.styles.scss
+++ b/src/pages/home/home.styles.scss
@@ -8,7 +8,6 @@
 	justify-content: center;
 	min-height: 100vh;
 	padding: 1rem;
-	width: 100%;
 
 	.home-container {
 		align-items: center;
